add sorting and fix pagination
