# src/v1/swagger.yml
@@ -5,7 +5,9 @@ info:
   version: 1.0.0
 servers:
   - url: http://localhost:3000
-    description: Local server
+    description: Development server
+  - url: https://cities-api.onrender.com
+    description: Beta server
 
 paths:
  /api/v1/cities:
@@ -18,6 +20,12 @@ paths:
          schema:
            type: string
          description: Any value of substring-city
+       - in: query
+         name: sort
+         schema:
+           type: integer
+           default: 1
+         description: "Sort results: `-1` descending, `1` ascendig"
        - in: query
          name: limit
          schema:
